parser/sample_tests/ours/bad3.txt

*** Error line 4.
  a = 5;
    ^
*** syntax error

